apex-libraries/sfdx-source/at4dx/main/schema/objects/ApplicationFactory_DomainBinding__mdt/ApplicationFactory_DomainBinding__mdt.object-meta.xml
<CustomObject>
    <description>All Force-DI bindings for SObject Selectors to the ApplicationSObjectDomainDIModule</description>
    <label>ApplicationFactory_DomainBinding</label>
    <pluralLabel>ApplicationFactory_DomainBindings</pluralLabel>
</CustomObject>