apex-libraries/sfdx-source/at4dx/main/schema/objects/ApplicationFactory_DomainBinding__mdt/fields/BindingSObject__c.field-meta.xml
<CustomField>
    <fullName>BindingSObject__c</fullName>
    <description>The SObject that this Application Factory Domain Binding is mapped to.</description>
    <inlineHelpText>The SObject that this Application Factory Domain Binding is mapped to.</inlineHelpText>
    <label>Binding SObject</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>ApplicationFactory_DomainBindings</relationshipLabel>
    <relationshipName>ApplicationFactory_DomainBindings</relationshipName>
    <type>MetadataRelationship</type>
    <unique>true</unique>
</CustomField>