apex-libraries/sfdx-source/at4dx/main/schema/objects/ApplicationFactory_DomainBinding__mdt/fields/To__c.field-meta.xml
<CustomField>
    <fullName>To__c</fullName>
    <description
    >The Domain implementation class that is an implementation of the IApplicationSObjectDomain</description>
    <inlineHelpText
    >The Domain implementation class that is an implementation of the IApplicationSObjectDomain</inlineHelpText>
    <label>To</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>